# bfarr-comp-phys-25

./: .gitignore  README.md  pyproject.toml
notebooks/: Dense Neural Network Classifier for M4.ipynb  Dense Neural Network on MNIST Digits.ipynb  Intro to Flax.ipynb  Intro to Neural Networks.ipynb  Logistic Regression w SDSS.ipynb  Multiclass Classification.ipynb  Signal Processing.ipynb  VenusVolcanoes.ipynb
